# CUptiProfiler

./: .bazelrc  .clangd  .gitattributes  README.md  WORKSPACE
.devcontainer/: devcontainer.json
lib/: BUILD.bazel  injection.cpp
lib/include/: Eval.h
lib/src/: Eval.cpp  List.cpp  Metric.cpp
src/: BUILD.bazel  reduce.cu.cc
tools/compile_command_extractor/: BUILD.bazel  workspace.bzl
